# savevidai

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  compose.prod.yaml  compose.yaml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: cache.py  errors.py  extractor.py  main.py  maintenance.py  mux.py  platforms.py  proxy.py  reddit.py  resolve.py  schemas.py  sizes.py  tiktok.py  urls.py
backend/app/analytics/: config.py  hashing.py  recorder.py  router.py  service.py  stats.py  store.py
backend/tests/: conftest.py  test_analytics_api.py  test_analytics_boot.py  test_analytics_config.py  test_cache.py  test_errors.py  test_extractor.py  test_hashing.py  test_maintenance.py  test_maintenance_api.py  test_maintenance_flag.py  test_mux_api.py  test_proxy_api.py  test_recorder.py  test_reddit_manifest.py  test_reddit_map.py  test_reddit_oauth_map.py  test_reddit_vx.py  test_resolve_api.py  test_sizes.py  test_stats.py  test_store.py  test_tiktok.py  test_tiktok_page.py  test_urls.py
deploy/: README.md  app.env.example  setup-vps.sh
docs/superpowers/plans/: 2026-07-16-savevidai.md  2026-07-17-admin-analytics.md  2026-07-22-tiktok-slideshow-howto.md  2026-07-23-admin-maintenance-toggle.md  2026-07-24-peak-active-users.md
docs/superpowers/specs/: 2026-07-16-savevid-design.md  2026-07-16-savevidai-design.md  2026-07-17-admin-analytics-design.md  2026-07-20-tiktok-downloader-design.md  2026-07-22-reddit-downloader-design.md  2026-07-22-tiktok-slideshow-howto-design.md  2026-07-23-admin-maintenance-toggle-design.md  2026-07-23-analytics-v2-design.md  2026-07-24-peak-active-users-design.md
frontend/: index.html  tiktokvideodownloader.html  vite.config.ts
frontend/public/: maintenance.html  robots.txt  sitemap.xml
frontend/src/: App.test.tsx  App.tsx
scripts/: make_og.py  smoke.py
(+41 files in other folders)
